# emu80v4

./: .gitignore  CMakeLists.txt  README.md  vector06c_refactoring_plan.md  vector06c_storage_dependency_map.md
backup/lite/: litePal.cpp  litePal.h
backup/qt/: emu80.rc  icons.qrc  qtAboutDialog.cpp  qtAboutDialog.h  qtAboutDialog.ui  qtAudioDevice.cpp  qtAudioDevice.h  qtChoosePlatformDialog.cpp  qtChoosePlatformDialog.h  qtChoosePlatformDialog.ui  qtMainWindow.cpp  qtMainWindow.h  qtPaintWidget.cpp  qtPaintWidget.h  qtPal.cpp  qtPal.h  qtPalFile.cpp  qtPalFile.h  qtPalWindow.cpp  qtPalWindow.h  qtRenderHelper.cpp  qtRenderHelper.h  qtSettingsDialog.cpp  qtSettingsDialog.h  qtSettingsDialog.ui  qtToolBtn.cpp  qtToolBtn.h  translations.qrc
backup/sdl/: sdlPal.cpp  (+5 more)
boards/: murmulator.h  murmulator2.h  olimex-pico-pc.h  waveshare_rp2040_pizero.h  waveshare_rp2350_pizero.h
doc/: .~lock.ConfFiles.rtf#  .~lock.Emu80 v4 Manual.rtf#
drivers/hdmi-dvi/: CMakeLists.txt  hdmi-dvi.c  hdmi-dvi.h
src/: AddrSpace.cpp  AddrSpace.h  Apogey.cpp  Apogey.h  AtaDrive.cpp  AtaDrive.h  Bashkiria.cpp  Bashkiria.h  CloseFileHook.cpp  CloseFileHook.h  ConfigReader.cpp  ConfigReader.h  Covox.cpp  Covox.h  Cpu.cpp  Cpu.h  Cpu8080.cpp  Cpu8080.h  CpuHook.cpp  CpuHook.h  CpuWaits.h  CpuZ80.cpp  CpuZ80.h  Crt8275.cpp  Crt8275.h  Crt8275Renderer.cpp  Crt8275Renderer.h  CrtRenderer.cpp  CrtRenderer.h  DbgCalls.cpp  Debugger.cpp  Debugger.h  DiskImage.cpp  DiskImage.h  Dma8257.cpp  Dma8257.h  EmuCalls.cpp  EmuCalls.h  EmuConfig.cpp  EmuConfig.h  (+92 more)
util/: rk86_pixeltron_bin.h  rk_kr03_rom.h
(+80 files in other folders)
